<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"

    android:layout_centerHorizontal="true"
    android:background="@drawable/Rz_104"
    >

    <TextView
        android:id="@+id/nomjeu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:background="@drawable/bouton"

        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/nouvellepartie"
        android:layout_alignEnd="@+id/nouvellepartie" />
    <Button
        android:id="@+id/nouvellepartie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Jouer"

        android:layout_above="@+id/tutoriel"
        android:layout_alignLeft="@+id/tutoriel"
        android:layout_alignStart="@+id/tutoriel" />


    <Button
        android:id="@+id/tutoriel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tutoriel"
        android:layout_above="@+id/defis"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/defis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Défis"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/tutoriel"
        android:layout_alignStart="@+id/tutoriel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Paramètres"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button" />

</RelativeLayout>